fix(card): prevent header from overlapping with checkbox

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -69,6 +69,13 @@
     font-medium;
 }
 
+:host([selectable]) {
+  .header {
+    // prevents overlap with checkbox
+    padding-inline-end: calc(theme("spacing.3") + theme("spacing.5"));
+  }
+}
+
 @include slotted("subtitle", "*") {
   @apply text-color-2
     text-n2-wrap
